- All 3 representations for the rest of the classes - Rewrote the Matryoshka services